add end poin kamar by id hotel
